fix: left-align breadcrumb (remove centering margins)

--- a/src/styles/blog-single.css
+++ b/src/styles/blog-single.css
@@ -76,9 +76,6 @@
   gap: .2rem .4rem;
   padding: 1.25rem 0 0;
   font-size: .8rem;
-  max-width: 720px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .bs-bc-link {
